[package]
name = "amx"
version = "0.0.0"
authors = ["yvt <i@yvt.jp>"]
edition = "2024"
license = "MIT/Apache-2.0"

[features]
default = ["either", "doc_cfg"]
doc_cfg = []

[dependencies]
either = { version = "1.6.1", optional = true }
cfg-if = "1"

[dev-dependencies]
quickcheck_macros = "0.9.1"
aligned_box = "0.2.0"
quickcheck = "0.9.2"
itertools = "0.10.0"
either = "1.6.1"
clap = { version = "4.4.8", features = ["derive"] }
log = "0.4.11"
